# AI-Fitness-Trainer

./: README.md  pyproject.toml  requirements.txt
src/: Home.py  bicep_angle.py  squat_angle.py
src/PoseModule/: PoseModule.py  __init__.py
src/pages/: 1_Bicep_Curls.py  2_Squats.py  3_Instructions.py
